Alignment of TB bars corrected.

--- a/dev/assets/scss/_config.scss
+++ b/dev/assets/scss/_config.scss
@@ -89,3 +89,6 @@ $phone-radius-dot: 4px;
 $border-radius-dot: 2px;
 $tablet-border-radius-dot: 1px;
 $phone-border-radius-dot: 1px;
+
+// Bars
+$border-bar: 2px solid $black;
