--- a/dev/assets/scss/_mixins.scss
+++ b/dev/assets/scss/_mixins.scss
@@ -303,8 +303,8 @@
 	display: flex;
 	flex: none;
 	overflow: hidden;
-	border-top: 2px solid $black;
-	border-bottom: 2px solid $black;
+	border-top: $border-bar;
+	border-bottom: $border-bar;
 	background-color: $color;
 	cursor: pointer;
 	z-index: 5;
@@ -327,11 +327,13 @@
 		width: 50%;
 
 		&:first-child {
-			border-left: 2px solid $black;
+			border-left: $border-bar;
+			margin-right: auto;
 		}
 
 		&:last-child {
-			border-right: 2px solid $black;
+			border-right: $border-bar;
+			margin-left: auto;
 		}
 	}
 }
